--- a/src_pose_2D_single_model/requirements.txt
+++ b/src_pose_2D_single_model/requirements.txt
@@ -4,108 +4,60 @@ aiohttp==3.8.1
 aiosignal==1.2.0
 alembic==1.7.7
 antlr4-python3-runtime==4.9.3
-apex==0.1
+apex
 appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
 asn1crypto==1.5.1
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==21.4.0
 av==8.0.3
-avi-r==1.3.9
+avi-r
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
-beautifulsoup4==4.11.1
-black==22.3.0
-bleach==5.0.0
-blinker==1.4
-blis==0.7.7
-brotlipy==0.7.0
 cached-property==1.5.2
 cachetools==4.2.4
 catalogue==2.0.6
 certifi==2021.10.8
 cffi==1.14.6
-cftime==1.5.1.1
 chardet==4.0.0
 charset-normalizer==2.0.12
-click==8.0.4
-cloudpickle==2.2.1
-colorama==0.4.4
-conda==4.10.3
-conda-build==3.21.6
-conda-package-handling==1.8.1
-configparser==5.2.0
-cryptography==36.0.2
 cycler==0.11.0
-cymem==2.0.6
-Cython==0.29.32
-cytoolz==0.11.2
 dask==2022.4.1
 databricks-cli==0.12.1
-dataclasses==0.8
+dataclasses==0.6
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
-detectron2==0.6
-dill==0.3.4
-docker==5.0.3
-docker-pycreds==0.4.0
 entrypoints==0.4
 fastjsonschema==2.15.3
 filelock==3.6.0
-Flask==2.1.1
 flatbuffers==1.12
 flit_core==3.7.1
-frozenlist==1.3.0
 fsspec==2022.3.0
 future==0.18.2
 futures==3.0.5
 fvcore==0.1.5.post20220512
 gast==0.4.0
 gitdb==4.0.9
-GitPython==3.1.31
 glob2==0.7
-google-auth==1.23.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.56.0
-gorilla==0.4.0
 greenlet==1.1.2
 grpcio==1.42.0
-gunicorn==20.1.0
-h5py==3.2.1
-horovod==0.23.0
-huggingface-hub==0.4.0
-hydra-core==1.2.0
 idna==3.3
 imagecodecs==2021.8.26
 imageio==2.18.0
 importlib-metadata==4.11.3
 importlib-resources==5.6.0
 iopath==0.1.9
-ipykernel==6.8.0
-ipython==7.32.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
 itsdangerous==2.1.2
 jedi==0.18.1
-Jinja2==3.1.1
 joblib==1.1.0
 jsonschema==4.4.0
 junit-xml==1.9
-jupyter-client==7.1.2
-jupyter-core==4.9.1
 kiwisolver==1.4.2
 langcodes==3.3.0
 libarchive-c==3.1
 llvmlite==0.38.0
 locket==1.0.0
-Mako==1.2.0
-Markdown==3.3.3
-MarkupSafe==2.1.1
-mask-rcnn==2.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
 memory-profiler==0.60.0
@@ -116,23 +68,10 @@ mpi4py==3.1.3
 multidict==5.2.0
 murmurhash==1.0.6
 mypy-extensions==0.4.3
-nbclient==0.6.0
-nbconvert==6.5.0
-nbformat==5.3.0
 nest-asyncio==1.5.5
-netCDF4==1.5.7
-networkx==2.7.1
 nibabel==3.2.2
 notebook==6.4.11
-numba==0.55.1
-numpy==1.20.3
-nvidia-dali-cuda110==1.9.0
-oauthlib==3.2.0
-olefile==0.46
-omegaconf==2.2.2
-onnx==1.10.2
-onnxconverter-common==1.9.0
-open-ce-builder==9.0.1
+numpy
 opencv-python==4.7.0.72
 opt-einsum==3.3.0
 packaging==21.3
@@ -161,7 +100,6 @@ protobuf==3.14.0
 psutil==5.9.0
 ptyprocess==0.7.0
 py==1.11.0
-pyarrow==5.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 pycocotools==2.0.4
@@ -169,86 +107,37 @@ pycosat==0.6.3
 pycparser==2.21
 pydantic==1.8.2
 pydicom==2.3.0
-pydot==1.4.2
 Pygments==2.11.2
 PyJWT==2.3.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
-PySocks==1.7.1
+#PySocks==1.7.1
 pytest==5.4.3
-python-dateutil==2.8.2
-pytz==2022.1
-PyWavelets==1.3.0
 PyYAML==6.0
-pyzmq==22.3.0
-querystring-parser==1.2.4
-regex==2022.3.15
 requests==2.27.1
 requests-oauthlib==1.3.1
-rsa==4.8
-ruamel-yaml-conda==0.15.80
-sacremoses==0.0.49
 scikit-image==0.19.2
 scikit-learn==1.0.2
 scipy==1.7.3
-seaborn==0.11.2
-Send2Trash==1.8.0
-sentencepiece==0.1.96
 setuptools==67.6.1
 shap==0.40.0
 shellingham==1.4.0
 simplejson==3.17.6
 six==1.16.0
-skl2onnx==1.10.3
-slicer==0.0.7
-smart-open==5.2.1
-smmap==3.0.5
-soupsieve==2.3.1
-spacy==3.2.1
-spacy-legacy==3.0.8
 spacy-loggers==1.0.1
 SQLAlchemy==1.4.35
-sqlparse==0.4.2
-srsly==2.4.2
 statsmodels==0.13.2
 submitit==1.4.1
 tabulate==0.8.9
-tenacity==8.0.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.6.0.post3
-termcolor==1.1.0
-terminado==0.13.3
-thinc==8.0.12
-thop==0.1.1.post2209072238
 threadpoolctl==3.1.0
 tifffile==2021.7.2
-tinycss2==1.1.1
-tokenizers==0.10.3
-tomli==2.0.1
-toolz==0.11.2
-torch==1.10.1
-torchtext==0.11.0a0+5c65ec0
-torchvision==0.11.2
-tornado==6.1
+torch==1.12.0
+torchvision==0.13.0
 tqdm==4.64.0
 traitlets==5.1.1
-transformers==4.16.2
 typer==0.4.1
 typing_extensions==4.2.0
 urllib3==1.26.9
 uWSGI==2.0.20
-wasabi==0.9.1
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.3.2
-Werkzeug==2.1.1
 wheel==0.37.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-xgboost==1.5.1
-yacs==0.1.8
-yapf==0.32.0
-yarl==1.7.2
-zipp==3.8.0
